# personal_assistant

./: .gitignore  README.md
backend/: compose.yaml  mcp_client.py  mcp_server.py  pyproject.toml
backend/api/: Dockerfile  app.py  mcp_utils.py  requirements.txt
backend/mcp/: Dockerfile  agent_with_mcp_tools.py  mcp_server.py  requirements.txt
backend/preprocessing/: agent_builder.py  data_processing_agent.py  entry_script.py  generate_samples.py
backend/preprocessing/data/: sample_chats.txt  sample_emails.txt  sample_notes.txt
backend/utils/: configs.py  factory.py  qdrant_service.py
frontend/: app.js  bot.js  package-lock.json  package.json
